--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -858,7 +858,7 @@
   "pli-tv-kd11:22.3.12": "If he forgives, all is well. ",
   "pli-tv-kd11:22.3.13": "If not, then within sight and hearing of Citta, the monk Sudhamma should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and confess that offense.” ",
   "pli-tv-kd11:23.1.1": "Soon afterwards Sudhamma went to Macchikāsaṇḍa with a monk as a companion messenger, and he asked Citta for forgiveness. ",
-  "pli-tv-kd11:23.1.2": "And he conducted himself properly and suitably so as to deserve to be released. He then went to the monks ",
+  "pli-tv-kd11:23.1.2": "And he conducted himself properly and suitably, and deserved to be released. He then went to the monks ",
   "pli-tv-kd11:23.1.3": "and told them about this, ",
   "pli-tv-kd11:23.1.4": "adding, “What should I do now?” ",
   "pli-tv-kd11:23.1.5": "The monks told the Buddha. He had the monks gathered and said, ",
