--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -862,7 +862,7 @@
   "pli-tv-kd11:23.1.3": "and told them about this, ",
   "pli-tv-kd11:23.1.4": "adding, “What should I do now?” ",
   "pli-tv-kd11:23.1.5": "The monks told the Buddha. He had the monks gathered and said, ",
-  "pli-tv-kd11:23.1.6": "“Well then, lift that legal procedure of reconciliation against Sudhamma. ",
+  "pli-tv-kd11:23.1.6": "“Well then, lift that legal procedure of reconciliation against Sudhamma.” ",
   "pli-tv-kd11:23.2.0": "4.5 The group of eighteen on not to be lifted ",
   "pli-tv-kd11:23.2.1": "“When a monk has five qualities, a legal procedure of reconciliation against him shouldn’t be lifted: ",
   "pli-tv-kd11:23.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
