--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -883,7 +883,7 @@
   "pli-tv-kd11:23.2.22": "The group of eighteen on to be lifted is finished. ",
   "pli-tv-kd11:24.1.1": "“And this is how it should be lifted. ",
   "pli-tv-kd11:24.1.2": "The monk Sudhamma should approach the Sangha, put his upper robes over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
-  "pli-tv-kd11:24.1.3": "‘Venerables, the Sangha has done a legal procedure of reconciliation against me, but I’ve conducted myself properly and suitably so as to deserve to be released. I ask for that legal procedure to be lifted.’ ",
+  "pli-tv-kd11:24.1.3": "‘Venerables, the Sangha has done a legal procedure of reconciliation against me. I’m now conducting myself properly and suitably, and deserve to be released. I ask for that legal procedure to be lifted.’ ",
   "pli-tv-kd11:24.1.4": "And he should ask a second ",
   "pli-tv-kd11:24.1.5": "and a third time. ",
   "pli-tv-kd11:24.1.6": "A competent and capable monk should then inform the Sangha: ",
