--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -926,12 +926,12 @@
   "pli-tv-kd11:25.2.1": "And this is how it should be done. ",
   "pli-tv-kd11:25.2.2": "First you should accuse the monk Channa. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:25.2.3": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:25.2.4": "The monk Channa has committed an offense, but refuses to recognize it. ",
+  "pli-tv-kd11:25.2.4": "This monk Channa has committed an offense, but refuses to recognize it. ",
   "pli-tv-kd11:25.2.5": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.6": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:25.2.7": "This is the motion. ",
   "pli-tv-kd11:25.2.8": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:25.2.9": "The monk Channa has committed an offense, but refuses to recognize it. ",
+  "pli-tv-kd11:25.2.9": "This monk Channa has committed an offense, but refuses to recognize it. ",
   "pli-tv-kd11:25.2.10": "The Sangha does a legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.11": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:25.2.12": "Any monk who approves of doing this legal procedure ",
