--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -940,7 +940,7 @@
   "pli-tv-kd11:25.2.15": "For the second time I speak on this matter … ",
   "pli-tv-kd11:25.2.16": "For the third time I speak on this matter. ",
   "pli-tv-kd11:25.2.17": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:25.2.18": "The monk Channa has committed an offense, but refuses to recognize it. ",
+  "pli-tv-kd11:25.2.18": "This monk Channa has committed an offense, but refuses to recognize it. ",
   "pli-tv-kd11:25.2.19": "The Sangha does a legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.20": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:25.2.21": "Any monk who approves of doing this legal procedure ",
