--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1081,7 +1081,7 @@
   "pli-tv-kd11:28.2.21": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.22": "he stays in the same room in a monastery as a regular monk; he stays in the same room in a non-monastery as a regular monk; he stays in the same room in a monastery or a non-monastery as a regular monk; ",
   "pli-tv-kd11:28.2.23": "he doesn’t get up from his seat when he sees a regular monk; ",
-  "pli-tv-kd11:28.2.24": "he dismisses a regular monk, whether inside or outside a dwelling. ",
+  "pli-tv-kd11:28.2.24": "he dismisses a regular monk, whether indoors or outdoors. ",
   "pli-tv-kd11:28.2.26": "When a monk has eight qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.27": "he cancels the observance-day ceremony of a regular monk; he cancels the invitation ceremony of a regular monk; he directs a regular monk; he gives instructions to a regular monk from a position of authority; he gets permission from a regular monk to correct him; he accuses a regular monk of an offense; he reminds a regular monk of an offense; he associates inappropriately with other monks.” ",
   "pli-tv-kd11:28.2.29": "The group of forty-three on not to be lifted in regard to the legal procedure of ejection for not recognizing an offense is finished. ",
