--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1126,7 +1126,7 @@
   "pli-tv-kd11:30.1.20": "The Sangha lifts that legal procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:30.1.21": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:30.1.22": "Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd11:30.1.23": "The Sangha has lifted the legal procedure of ejecting the monk Channa for not recognizing an offense. ",
+  "pli-tv-kd11:30.1.23": "The Sangha has lifted that legal procedure of ejecting the monk Channa for not recognizing an offense. ",
   "pli-tv-kd11:30.1.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:30.1.25": "The fifth section on the legal procedure of ejection for not recognizing an offense is finished. ",
   "pli-tv-kd11:31.1.0": "6. The legal procedure of ejection for not making amends for an offense ",
