--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1149,15 +1149,15 @@
   "pli-tv-kd11:31.1.17": "And this is how it should be done. ",
   "pli-tv-kd11:31.1.18": "First you should accuse the monk Channa. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:31.1.19": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:31.1.20": "The monk Channa has committed an offense, but refuses to make amends for it. ",
+  "pli-tv-kd11:31.1.20": "This monk Channa has committed an offense, but refuses to make amends for it. ",
   "pli-tv-kd11:31.1.21": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.22": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:31.1.23": "This is the motion. ",
   "pli-tv-kd11:31.1.24": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:31.1.25": "The monk Channa has committed an offense, but refuses to make amends for it. ",
+  "pli-tv-kd11:31.1.25": "This monk Channa has committed an offense, but refuses to make amends for it. ",
   "pli-tv-kd11:31.1.26": "The Sangha does a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.27": "prohibiting him from living with the Sangha. ",
-  "pli-tv-kd11:31.1.28": "Any monk who approves of doing that legal procedure ",
+  "pli-tv-kd11:31.1.28": "Any monk who approves of doing this legal procedure ",
   "pli-tv-kd11:31.1.29": "should remain silent. ",
   "pli-tv-kd11:31.1.30": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:31.1.31": "For the second time I speak on this matter … ",
