--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1163,7 +1163,7 @@
   "pli-tv-kd11:31.1.31": "For the second time I speak on this matter … ",
   "pli-tv-kd11:31.1.32": "For the third time I speak on this matter. ",
   "pli-tv-kd11:31.1.33": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:31.1.34": "The monk Channa has committed an offense, but refuses to make amends for it. ",
+  "pli-tv-kd11:31.1.34": "This monk Channa has committed an offense, but refuses to make amends for it. ",
   "pli-tv-kd11:31.1.35": "The Sangha is doing a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.36": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:31.1.37": "Any monk who approves of doing that legal procedure ",
