--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1321,7 +1321,7 @@
   "pli-tv-kd11:31.1.199": "and a third time. ",
   "pli-tv-kd11:31.1.200": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:31.1.201": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:31.1.202": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
+  "pli-tv-kd11:31.1.202": "The Sangha has done a legal procedure of ejecting the monk Channa for not making amends for an offense. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
   "pli-tv-kd11:31.1.203": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.204": "This is the motion. ",
   "pli-tv-kd11:31.1.205": "Please, Venerables, I ask the Sangha to listen. ",
