--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -45,7 +45,7 @@
   "pli-tv-bi-vb-np3:2.1.16": "The robe-cloth is to be relinquished to a sangha, a group, or an individual nun. ",
   "pli-tv-bi-vb-np3:2.1.17": "“And, monks, it’s to be relinquished like this. ",
   "pli-tv-bi-vb-np3:2.1.18": "(To be expanded as in Nuns’ Relinquishment 1, [](pli-tv-bi-vb-np1:2.1.21--2.1.43), with appropriate substitutions.) ",
-  "pli-tv-bi-vb-np3:2.1.19": "… ‘Venerables, this robe-cloth, which I took back after swapping it with a nun, is to be relinquished. I relinquish it to the Sangha.’ … ",
+  "pli-tv-bi-vb-np3:2.1.19": "… ‘Venerables, this robe-cloth, which I took back after trading it with a nun, is to be relinquished. I relinquish it to the Sangha.’ … ",
   "pli-tv-bi-vb-np3:2.1.20": "the Sangha should give … ",
   "pli-tv-bi-vb-np3:2.1.21": "you should give … ",
   "pli-tv-bi-vb-np3:2.1.22": "‘I give this robe-cloth back to you.’” ",
