--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-np/pli-tv-bi-vb-np3_translation-en-brahmali.json
@@ -50,7 +50,7 @@
   "pli-tv-bi-vb-np3:2.1.21": "you should give … ",
   "pli-tv-bi-vb-np3:2.1.22": "‘I give this robe-cloth back to you.’” ",
   "pli-tv-bi-vb-np3:2.2.0": "Permutations ",
-  "pli-tv-bi-vb-np3:2.2.1": "If the other person is fully ordained and she perceives her as such, and after swapping robe-cloth with her she takes it back or has it taken back, she commits an offense entailing relinquishment and confession. ",
+  "pli-tv-bi-vb-np3:2.2.1": "If the other person is fully ordained and she perceives her as such, and after trading robe-cloth with her she takes it back or has it taken back, she commits an offense entailing relinquishment and confession. ",
   "pli-tv-bi-vb-np3:2.2.2": "If the other person is fully ordained, but she is unsure of it, and after swapping robe-cloth with her she takes it back or has it taken back, she commits an offense entailing relinquishment and confession. ",
   "pli-tv-bi-vb-np3:2.2.3": "If the other person is fully ordained, but she does not perceive her as such, and after swapping robe-cloth with her she takes it back or has it taken back, she commits an offense entailing relinquishment and confession. ",
   "pli-tv-bi-vb-np3:2.2.4": "If she trades another requisite, and then takes it back or has it taken back, she commits an offense of wrong conduct. ",
