--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.1_translation-en-brahmali.json
@@ -338,7 +338,7 @@
   "pli-tv-pvr2.1:44.3": "“Whom is it about?” ",
   "pli-tv-pvr2.1:44.4": "The nun Thullanandā. ",
   "pli-tv-pvr2.1:44.5": "“What is it about?” ",
-  "pli-tv-pvr2.1:44.6": "The nun Thullanandā swapping a robe with a nun and then taking it back. ",
+  "pli-tv-pvr2.1:44.6": "The nun Thullanandā trading a robe with a nun and then taking it back. ",
   "pli-tv-pvr2.1:44.7": "There is one rule. ",
   "pli-tv-pvr2.1:44.8": "Of the six kinds of origins of offenses, it originates in three ways: … ",
   "pli-tv-pvr2.1:45.1": "“The offense entailing relinquishment and confession for asking for one thing and then for something else—where was it laid down?” ",
