--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -73,7 +73,7 @@
   "pli-tv-pvr2.2:18.1": "When determining out-of-season robe-cloth as “in-season”, and then distributing it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:18.2": "when she is in the process of distributing it, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr2.2:18.3": "when she has distributed it, she commits an offense entailing relinquishment and confession. ",
-  "pli-tv-pvr2.2:19.1": "When swapping robes with a nun and then just taking it back, she commits two kinds of offenses: ",
+  "pli-tv-pvr2.2:19.1": "When trading robes with a nun and then just taking it back, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:19.2": "when she is in the process taking it back, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr2.2:19.3": "when she has taken it back, she commits an offense entailing relinquishment and confession. ",
   "pli-tv-pvr2.2:20.1": "When asking for one thing and then for something else, she commits two kinds of offenses: ",
