--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -32,7 +32,7 @@
   "pli-tv-kd12:1.1.27": "Monks on probation should do the following with one another according to seniority: bow down, stand up, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another’s backs when bathing. ",
   "pli-tv-kd12:1.1.28": "Monks on probation should do five things with regular monks according to seniority: ",
   "pli-tv-kd12:1.1.29": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
-  "pli-tv-kd12:1.1.30": "And I will lay down the proper conduct for a monk on probation. ",
+  "pli-tv-kd12:1.1.30": "And now I will lay down the proper conduct for a monk on probation. ",
   "pli-tv-kd12:1.2.2": "This is the proper conduct: ",
   "pli-tv-kd12:1.2.3": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:1.2.4": "He shouldn’t give formal support. ",
