--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -321,11 +321,11 @@
   "pli-tv-kd12:5.1.47": "He shouldn’t go from a monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.48": "He shouldn’t go from a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:5.1.49": "He shouldn’t go from a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.50": "He should not go from a non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.51": "He should not go from a monastery or non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.52": "He should not go from a monastery or non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.53": "He should not go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:5.1.54": "He may go from a monastery with monks to one with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
+  "pli-tv-kd12:5.1.50": "He shouldn’t go from a non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.51": "He shouldn’t go from a monastery or non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.52": "He shouldn’t go from a monastery or non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.53": "He shouldn’t go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:5.1.54": "He may go from a monastery with monks to one with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:5.1.55": "He may go from a monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:5.1.56": "He may go from a monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:5.1.57": "He may go from a non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
